correction alignement colonne

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
     font-size: 1.2em;
 }
 
-.rechercher /* Bouton Rechercher*/
+.rechercher 
 {
     
     font-family: 'Roboto';
@@ -82,6 +82,7 @@
 {
     margin-top: 30px;
     font-family:'roboto';
+    
 
 }
 
@@ -119,7 +120,7 @@
 .numb
 {
     position: relative;
-    right: 40px;
+    right: 20px;
     color: white;
     background-color: #9356DC;
     width: 30px;
@@ -139,14 +140,21 @@
     margin-bottom: 15px;
 }
 
+.mobile_icn
+{
+    margin-left: 10px;
+}
+
 .icon_btn
 {
     
+    margin-right: 60px;
     color: grey;
 }
 
 .shop_btn
 {
+    margin-right: 52px;
     color: #9356DC;
 }
 
@@ -154,7 +162,7 @@
 {
    margin-top: 50px;
    padding-top: 30px;
-   padding-bottom: 640px;
+   padding-bottom: 50px;
    background-color: #EEECEF ;
 
 }
@@ -183,14 +191,21 @@
 .vignette_restaurant img 
 {
     
-    width: 280px;
+    width: 300px;
     max-height: 150px;
-    padding-top: 3px;
-    margin-left: 3px;
-    margin-right: 3px;
     border-radius: 10px 10px;
     
-    
+}
+.vignette_restaurant:hover
+{
+    background-color: #deebff;
+    transform: scale(1.04);
+}
+.vignette_restaurant a 
+{
+    text-decoration: none;
+    color: black;
+    display: block;
 }
 
 .nom_restau
@@ -202,6 +217,7 @@
     font-weight: bold;
     height: 6px;
     font-family: 'roboto';
+    
 }
 
 .ville_restau
@@ -211,6 +227,7 @@
     font-family: 'roboto';
     font-size: 0.9em;
     height: 6px;
+    
 }
 
 
@@ -225,6 +242,8 @@
 
 a{
     text-decoration: none;
+    margin-left: 10px;
+    color: white;    
 }
 
 .footer_logo
@@ -232,22 +251,24 @@ a{
     margin-left: 15px;
     font-family: 'Shrikhand';
     color: white;
-
 }
 
 footer{
+    
     background-color: #292929;
     padding-bottom: 15px;
     padding-top: 8px;
 }
+
+
 .footer_list
 {
     display: flex;
     flex-flow: column nowrap;
-list-style: none;
-font-family: 'roboto';
-text-decoration: white;
-color: white;
+    list-style: none;
+    font-family: 'roboto';
+    text-decoration: none;
+    color: white;
 
 }
 
